--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="css/public.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/public.css">
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
     <script src="js/swiper-3.4.2.min.js"></script>
@@ -20,7 +19,9 @@
     <header class="header">
         <div class="container">
             <nav class="header-wrap row">
-                <img class="logo" src="img/logo.png" alt="">
+                <a class="logo" href="###">
+                    <img src="img/logo.png" alt="">
+                </a>
                 <ul id="navtab" class="list-inline">
                     <li class="list-inline-item sel">
                         <a href="###">首页</a>
@@ -309,7 +310,4 @@
     </footer>
 </body>
 <script src="js/public.js"></script>
-<script>
-
-</script>
 </html>
