--- a/产品中心.html
+++ b/产品中心.html
@@ -2,9 +2,279 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>产品中心</title>
+    <link rel="stylesheet" href="dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
+    <link rel="stylesheet" href="css/public.css">
+    <link rel="stylesheet" href="css/productCenter.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="dist/js/bootstrap.min.js"></script>
+    <script src="js/swiper-3.4.2.min.js"></script>
 </head>
 <body>
-
+<header class="header">
+    <div class="container">
+        <nav class="header-wrap row">
+            <img class="logo" src="img/logo.png" alt="">
+            <ul id="navtab" class="list-inline">
+                <li class="list-inline-item sel">
+                    <a href="###">首页</a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="###">产品中心</a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="###">关于宝尊</a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="###">新闻中心</a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="###">加入保障</a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="###">联系我们</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<section class="content">
+    <div class="cont1">
+        <a class="bj" href="###">
+            <img src="img/bj01.png" alt="">
+        </a>
+        <div class="proBar">
+            <div class="container">
+                <div class="bar1 row">
+                    <div class="col-2 b1-left">
+                        <div class="le-1">产品中心</div>
+                        <div class="le-2">PRODUCTS CENTER</div>
+                    </div>
+                    <div class="col-10 b1-right">
+                        <div class=" bar1-1 row text-center">
+                            <div class="col-3 sel">
+                                <a href="###">分类</a>
+                            </div>
+                            <div class="col-3">
+                                <a href="###">型号</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row bar2 text-center">
+                    <div class="col-2 sel">
+                        <a href="###">全部</a>
+                    </div>
+                    <span>丨</span>
+                    <div class="col-2">
+                        <a href="###">4D钢化膜</a>
+                    </div>
+                    <span>丨</span>
+                    <div class="col-2">
+                        <a href="###">碳纤钢化膜</a>
+                    </div>
+                    <span>丨</span>
+                    <div class="col-2">
+                        <a href="###">丝印钢化膜</a>
+                    </div>
+                    <span>丨</span>
+                    <div class="col-2">
+                        <a href="###">透明下班膜</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="cont2">
+        <div class="container">
+            <div class="row">
+                <div class="col-4 r-slide">
+                    <a href="###">
+                        <div class="slide1">
+                            <img class="mx-auto" src="img/tu02.png" alt="">
+                        </div>
+                        <div class="slide2">
+                            <div class="slide-2 text-center">防爆玻璃膜</div>
+                            <div class="slide-3 text-center">for iphone 6/6s</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-4 r-slide">
+                    <a href="###">
+                        <div class="slide1">
+                            <img class="mx-auto" src="img/tu02.png" alt="">
+                        </div>
+                        <div class="slide2">
+                            <div class="slide-2 text-center">防爆玻璃膜</div>
+                            <div class="slide-3 text-center">for iphone 6/6s</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-4 r-slide">
+                    <a href="###">
+                        <div class="slide1">
+                            <img class="mx-auto" src="img/tu02.png" alt="">
+                        </div>
+                        <div class="slide2">
+                            <div class="slide-2 text-center">防爆玻璃膜</div>
+                            <div class="slide-3 text-center">for iphone 6/6s</div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4 r-slide">
+                    <a href="###">
+                        <div class="slide1">
+                            <img class="mx-auto" src="img/tu02.png" alt="">
+                        </div>
+                        <div class="slide2">
+                            <div class="slide-2 text-center">防爆玻璃膜</div>
+                            <div class="slide-3 text-center">for iphone 6/6s</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-4 r-slide">
+                    <a href="###">
+                        <div class="slide1">
+                            <img class="mx-auto" src="img/tu02.png" alt="">
+                        </div>
+                        <div class="slide2">
+                            <div class="slide-2 text-center">防爆玻璃膜</div>
+                            <div class="slide-3 text-center">for iphone 6/6s</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-4 r-slide">
+                    <a href="###">
+                        <div class="slide1">
+                            <img class="mx-auto" src="img/tu02.png" alt="">
+                        </div>
+                        <div class="slide2">
+                            <div class="slide-2 text-center">防爆玻璃膜</div>
+                            <div class="slide-3 text-center">for iphone 6/6s</div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4 r-slide">
+                    <a href="###">
+                        <div class="slide1">
+                            <img class="mx-auto" src="img/tu02.png" alt="">
+                        </div>
+                        <div class="slide2">
+                            <div class="slide-2 text-center">防爆玻璃膜</div>
+                            <div class="slide-3 text-center">for iphone 6/6s</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-4 r-slide">
+                    <a href="###">
+                        <div class="slide1">
+                            <img class="mx-auto" src="img/tu02.png" alt="">
+                        </div>
+                        <div class="slide2">
+                            <div class="slide-2 text-center">防爆玻璃膜</div>
+                            <div class="slide-3 text-center">for iphone 6/6s</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-4 r-slide">
+                    <a href="###">
+                        <div class="slide1">
+                            <img class="mx-auto" src="img/tu02.png" alt="">
+                        </div>
+                        <div class="slide2">
+                            <div class="slide-2 text-center">防爆玻璃膜</div>
+                            <div class="slide-3 text-center">for iphone 6/6s</div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4 r-slide">
+                    <a href="###">
+                        <div class="slide1">
+                            <img class="mx-auto" src="img/tu02.png" alt="">
+                        </div>
+                        <div class="slide2">
+                            <div class="slide-2 text-center">防爆玻璃膜</div>
+                            <div class="slide-3 text-center">for iphone 6/6s</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-4 r-slide">
+                    <a href="###">
+                        <div class="slide1">
+                            <img class="mx-auto" src="img/tu02.png" alt="">
+                        </div>
+                        <div class="slide2">
+                            <div class="slide-2 text-center">防爆玻璃膜</div>
+                            <div class="slide-3 text-center">for iphone 6/6s</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-4 r-slide">
+                    <a href="###">
+                        <div class="slide1">
+                            <img class="mx-auto" src="img/tu02.png" alt="">
+                        </div>
+                        <div class="slide2">
+                            <div class="slide-2 text-center">防爆玻璃膜</div>
+                            <div class="slide-3 text-center">for iphone 6/6s</div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <nav class="page" aria-label="Page navigation example">
+                <ul class=" page1 pagination justify-content-center">
+                    <li class="page-item">
+                        <a class="page-link" href="###" tabindex="-1">上一页</a>
+                    </li>
+                    <li class="page-item disabled"><a class="page-link sel" href="###">1</a></li>
+                    <li class="page-item"><a class="page-link" href="###">2</a></li>
+                    <li class="page-item"><a class="page-link" href="###">3</a></li>
+                    <li class="page-item"><a class="page-link" href="###">4</a></li>
+                    <li class="page-item">
+                        <a class="page-link" href="###">下一页</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</section>
+<footer class="footer">
+    <div class="container">
+        <div class="footer-wrap row">
+            <div class="foot-left col-4 text-right">
+                <div class="clearfloat">
+                    <img class="float-right" src="img/logo01.png" alt="">
+                </div>
+                <div class="clearfloat">
+                    <img class="float-right" src="img/ma.png" alt="">
+                </div>
+                <div>宝尊微信公众号</div>
+            </div>
+            <div class="foot-right col-8">
+                <div class="right1">
+                    <cite class="right-1" title="Source Title">保尊·贴心保护</cite>
+                    <div class="right-2">Protection and intimate protection</div>
+                </div>
+                <div class="right2">
+                    <div>地址（Add）：广州市海珠区新港东潖洲商业广场潖洲新村18栋A座701室 邮编（PC）：510000</div>
+                    <div>传真（Add）：020-38061033   邮箱：（E-mail）：chen06623@163.com   邮编（PC）：510000</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-bottom text-center">粤ICP备05098314  Copyright © 2015-2016 hengdikeji </div>
+</footer>
 </body>
+<script src="js/productCenter.js"></script>
 </html>
