--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                         <a href="###">首页</a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="###">产品中心</a>
+                        <a href="产品中心.html">产品中心</a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="###">关于宝尊</a>
+                        <a href="关于保尊-公司简介.html">关于宝尊</a>
                     </li>
                     <li class="list-inline-item">
                         <a href="###">新闻中心</a>
@@ -310,4 +310,5 @@
     </footer>
 </body>
 <script src="js/public.js"></script>
+<script src="js/index.js"></script>
 </html>
