--- a/产品中心.html
+++ b/产品中心.html
@@ -21,14 +21,14 @@
         <nav class="header-wrap row">
             <img class="logo" src="img/logo.png" alt="">
             <ul id="navtab" class="list-inline">
+                <li class="list-inline-item">
+                    <a href="index.html">首页</a>
+                </li>
                 <li class="list-inline-item sel">
-                    <a href="###">首页</a>
+                    <a href="产品中心.html">产品中心</a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="###">产品中心</a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="###">关于宝尊</a>
+                    <a href="关于保尊-公司简介.html">关于宝尊</a>
                 </li>
                 <li class="list-inline-item">
                     <a href="###">新闻中心</a>
@@ -276,5 +276,6 @@
     <div class="footer-bottom text-center">粤ICP备05098314  Copyright © 2015-2016 hengdikeji </div>
 </footer>
 </body>
+<script src="js/public.js"></script>
 <script src="js/productCenter.js"></script>
 </html>
